src/test/ui/impl-trait/two_tait_defining_each_other2.stderr
error: unconstrained opaque type
  --> $DIR/two_tait_defining_each_other2.rs:3:10
   |
LL | type A = impl Foo;
   |          ^^^^^^^^
   |
   = note: `A` must be used in combination with a concrete type within the same module

error: aborting due to previous error

